--- a/src/assets/css/reset.css
+++ b/src/assets/css/reset.css
@@ -73,6 +73,10 @@ p {
 	display: flex;
 }
 
+.border-box{
+  box-sizing: border-box;
+}
+
 .container-inner {
 	margin: 0.5rem 0;
 	box-sizing: border-box;
